--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 MyFirstProject-c5d149b85549.json
 
 # My credentials for email:
-my_credential.py
+my_credentials.py
 
 # Also for hw3 to prevent all the sound files.
 *.aif
