--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Do not check in folder that contains all the images:
+50_categories/
+
 # json file for cloud access:
 # This is for hw3 to get speech to text working.
 MyFirstProject-c5d149b85549.json
